chore: fix overflow

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="min-h-full" lang="en">
+<html class="min-h-full max-w-screen overflow-hidden" lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
